Fix obvious typos

--- a/notes/2025/summary-2025-04-24.md
+++ b/notes/2025/summary-2025-04-24.md
@@ -18,13 +18,13 @@ The group discussed the need for standardized OpenTelemetry conventions for Grap
 - All participants to research and write up topics discussed in the meeting asynchronously before the next meeting.
 - Pascal to create a new agenda entry for the next monthly meeting.
 - All participants to add topics to the new agenda for the next meeting.
-- All participants to open and follow issues in the Otel Wg repository for further discussion.
+- All participants to open and follow issues in the OTel WG repository for further discussion.
 
 ## Summary
 
 ### Standardizing OpenTelemetry for GraphQL Conventions
 
-The group discusses the goals and motivations for creating standardized OpenTelemetry conventions for GraphQL. Pascal from Chili Piper emphasizes the need for common spans, tags, and meters across different GraphQL implementations to enable plug-and-play functionality with various monitoring tools. Benjie aims to ensure the conventions are sensible and don't introduce performance issues. Trask from OpenTelemetry offers support to help make this effort successful. Bryn from Apollo highlights the challenges of connecting to third-party APMs without standardized conventions. The group agrees on the importance of defining useful traces and metrics that don't include overly large payloads like full GraphQL documents.
+The group discusses the goals and motivations for creating standardized OpenTelemetry conventions for GraphQL. Pascal from ChilliCream emphasizes the need for common spans, tags, and meters across different GraphQL implementations to enable plug-and-play functionality with various monitoring tools. Benjie aims to ensure the conventions are sensible and don't introduce performance issues. Trask from OpenTelemetry offers support to help make this effort successful. Bryn from Apollo highlights the challenges of connecting to third-party APMs without standardized conventions. The group agrees on the importance of defining useful traces and metrics that don't include overly large payloads like full GraphQL documents.
 
 ### Monitoring Operations and Resolver Performance
 
