--- a/notes/2025/2025-04-24.md
+++ b/notes/2025/2025-04-24.md
@@ -39,7 +39,6 @@ Agenda:
 
 ## Identify and collect core use cases we want to support (10m, Pascal)
 
-- [TODO: insert Pascal's on-screen notes here]
 - Focus on what we want to discover or enable through OTEL data
 - Versioning: which client versions are in use.
 - How long to validate, coerce, compile, plan, execute the operation? Cache hit
@@ -91,3 +90,40 @@ Agenda:
 - Span events are being transitioned to log-based events.
 - Each error could be recorded as an event.
 - Span events are being deprecated.
+
+# Use Cases
+## Attributes of traces
+- operatrion name
+- operation type
+- operation hash
+- client type/name/version -> user_agent.orginal 
+- schema id/version <- user configurable *optional*
+- span.status
+
+## Errors
+error.type
+error.message
+- schema coordinate
+- path
+
+## Performance Insights
+- How does an operation performe over time
+- How does a resolver perform over time
+- Which operations/fields/resolver have errors
+- How big are dataloader batches
+- How many operations are executed/executing -> subscription
+- Which client & version sent a request? What is there distribution?
+- How long does an operation take to validate, coerce (& compile)
+
+## Error Insights
+- What are the most common errors
+
+## Schema Evolution Questions
+- Is this field in use?
+- How often is a field requested?
+- How many requests are made including a field?
+
+## Distributed GraphQL
+- Query Plan Step?
+- Query Planning Duration?
+
